--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.554.0",
-    "next": "^16.0.3",
-    "react": "18.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.2.1",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
